--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.10",
     "vue-carousel": "^0.18.0",
     "vue-flux": "^5.1.9",
+    "vue-loading-overlay": "^3.2.0",
     "vue-router": "^3.0.3",
     "vue-slick": "^1.1.15",
     "vue-tiny-slider": "^0.1.35",
