--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@chenfengyuan/vue-carousel": "^1.0.2",
     "@vue/cli": "^3.9.2",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "firebase": "^6.3.0",
     "firebaseui": "^4.0.0",
