--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebaseui": "^4.0.0",
     "hooper": "^0.3.1",
     "jquery": "^3.4.1",
+    "save": "^2.4.0",
     "vue": "^2.6.10",
     "vue-carousel": "^0.18.0",
     "vue-flux": "^5.1.9",
